AI-134: Fix new activity - fields alignment - client feedback issues

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_relationships.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_relationships.scss
@@ -1,8 +1,4 @@
 .page-civicrm-contact {
-  #crm-main-content-wrapper {
-    overflow: hidden;
-  }
-
   #contact-summary-relationship-tab {
     font-family: $font-family-base;
 
