--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_view-contact.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_view-contact.scss
@@ -1,4 +1,8 @@
 .page-civicrm-contact-view {
+  #crm-main-content-wrapper {
+    overflow: hidden;
+  }
+  
   #crm-container {
     .ui-widget-content {
       font-family: $font-family-base;
